; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/cart_hw/svp/extr_svp.c_svp_read_cell_2.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/cart_hw/svp/extr_svp.c_svp_read_cell_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@svp = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @svp_read_cell_2(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = ashr i32 %3, 1
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = and i32 %5, 30721
  %7 = load i32, i32* %2, align 4
  %8 = and i32 %7, 30
  %9 = shl i32 %8, 6
  %10 = or i32 %6, %9
  %11 = load i32, i32* %2, align 4
  %12 = and i32 %11, 2016
  %13 = ashr i32 %12, 4
  %14 = or i32 %10, %13
  store i32 %14, i32* %2, align 4
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @svp, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i32, i32* %2, align 4
  %19 = and i32 %18, 131070
  %20 = sext i32 %19 to i64
  %21 = add nsw i64 %17, %20
  %22 = inttoptr i64 %21 to i32*
  %23 = load i32, i32* %22, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
